@@ -1,3 +1,6 @@
+06/04
+	* Updated 11.2 gun prices [Playtester]
+	- also updated sql files
 06/01
 	* Merged random item fixes [Playtester]
 	- updated sql files
